--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -598,6 +598,7 @@ allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
+allow 195.160.221.37;
 allow 195.170.172.212;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -794,6 +795,7 @@ allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
 allow 209.141.50.249;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.58.254;
@@ -935,7 +937,6 @@ allow 23.191.200.26;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1261,6 +1262,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:52c0:139:f7a5::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1609,13 +1611,13 @@ allow 2a12:a800:9:1:193:26:115:82;
 allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
+allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1645,6 +1647,8 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
+allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1740,6 +1744,7 @@ allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.192;
+allow 45.9.168.54;
 allow 45.94.31.68;
 allow 45.95.169.102;
 allow 45.95.169.104;
@@ -1845,6 +1850,7 @@ allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.248.205;
+allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.153.138.7;
 allow 82.221.128.191;
@@ -1865,7 +1871,6 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
-allow 86.11.246.178;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1876,6 +1881,7 @@ allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
 allow 88.151.192.2;
+allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
