--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -598,6 +598,7 @@ set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
+set_real_ip_from 195.160.221.37;
 set_real_ip_from 195.170.172.212;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -794,6 +795,7 @@ set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.249;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
@@ -935,7 +937,6 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -1261,6 +1262,7 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:52c0:139:f7a5::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -1609,13 +1611,13 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:82;
 set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
+set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1645,6 +1647,8 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
+set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1740,6 +1744,7 @@ set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
+set_real_ip_from 45.9.168.54;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
 set_real_ip_from 45.95.169.104;
@@ -1845,6 +1850,7 @@ set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.248.205;
+set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
 set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
@@ -1865,7 +1871,6 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 85.93.31.31;
-set_real_ip_from 86.11.246.178;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
@@ -1876,6 +1881,7 @@ set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.222.33;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.192.2;
+set_real_ip_from 88.151.194.24;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
