--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -596,6 +596,7 @@ allow 194.26.192.177;
 allow 194.26.192.77;
 allow 194.53.137.102;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.160.221.37;
 allow 195.170.172.212;
 allow 195.176.3.23;
@@ -905,7 +906,6 @@ allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.248.100;
-allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -922,7 +922,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -930,12 +929,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1257,6 +1255,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1529,6 +1528,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1791,7 +1791,6 @@ allow 5.2.79.190;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.111.72;
-allow 54.36.187.187;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1853,6 +1852,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
