--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -224,6 +224,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.2.5;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -658,6 +659,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -906,7 +908,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -918,7 +919,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -926,13 +926,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.3;
+allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
-allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -964,7 +960,6 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1650,6 +1645,7 @@ allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.140;
 allow 45.134.225.36;
+allow 45.135.180.154;
 allow 45.137.70.158;
 allow 45.137.99.16;
 allow 45.137.99.182;
@@ -1752,6 +1748,7 @@ allow 51.161.198.74;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
+allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
