--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -587,6 +587,8 @@ allow 193.26.115.212;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.26.115.82;
+allow 193.32.162.104;
+allow 193.32.162.96;
 allow 193.36.132.21;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -926,9 +928,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1236,6 +1242,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1497,6 +1504,7 @@ allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
+allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
@@ -1727,6 +1735,7 @@ allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
+allow 45.9.156.101;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.102;
@@ -1753,6 +1762,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
