--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -587,6 +587,8 @@ allow 193.26.115.212;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.26.115.82;
+allow 193.32.162.104;
+allow 193.32.162.96;
 allow 193.36.132.21;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -809,9 +811,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.30;
 allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -954,6 +960,7 @@ allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
+allow 45.9.156.101;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.102;
@@ -980,6 +987,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
