--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -587,6 +587,8 @@ deny 193.26.115.212;
 deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.26.115.82;
+deny 193.32.162.104;
+deny 193.32.162.96;
 deny 193.36.132.21;
 deny 194.15.112.133;
 deny 194.15.113.118;
@@ -926,9 +928,13 @@ deny 23.191.200.23;
 deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
+deny 23.191.200.27;
+deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.30;
 deny 23.191.200.31;
+deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1236,6 +1242,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1497,6 +1504,7 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
+deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:231b::1;
@@ -1727,6 +1735,7 @@ deny 45.88.186.89;
 deny 45.88.186.92;
 deny 45.91.250.107;
 deny 45.9.148.50;
+deny 45.9.156.101;
 deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.102;
@@ -1753,6 +1762,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
