--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -587,6 +587,8 @@ set_real_ip_from 193.26.115.212;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.26.115.82;
+set_real_ip_from 193.32.162.104;
+set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -926,9 +928,13 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1236,6 +1242,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1497,6 +1504,7 @@ set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:14::24a8;
 set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
+set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
@@ -1727,6 +1735,7 @@ set_real_ip_from 45.88.186.89;
 set_real_ip_from 45.88.186.92;
 set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
+set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.102;
@@ -1753,6 +1762,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
